--- a/index.html
+++ b/index.html
@@ -549,5 +549,45 @@
         </div>
       </div>
     </footer>
+    <div class="modal-overlay">
+      <div class="modal">
+        <button class="close-modal">
+          <svg class="close-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="modal-text">Leave your contacts and we will call you back</p>
+        <form class="form">
+          <div class="form-wrapper">
+            <label class="label-field" for="username">Name</label>
+            <input type="text" id="username" name="name" />
+          </div>
+          <div class="form-wrapper">
+            <label class="label-field" for="usertel">Phone</label>
+            <input type="tel" id="usertel" name="tel" />
+          </div>
+          <div class="form-wrapper">
+            <label class="label-field" for="usermail">Email</label>
+            <input type="email" id="usermail" name="email" />
+          </div>
+          <div class="form-wrapper">
+            <label class="label-field" for="comment">Comment</label>
+            <textarea
+              id="comment"
+              name="comment"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <div>
+            <input type="checkbox" name="policy" id="policy" value="on" />
+            <label for="policy"
+              >I accept the terms and conditions of the
+              <a href="">Privacy Policy</a></label
+            >
+          </div>
+          <button type="submit" class="modal-btn">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
