--- a/index.html
+++ b/index.html
@@ -560,32 +560,65 @@
         <form class="form">
           <div class="form-wrapper">
             <label class="label-field" for="username">Name</label>
-            <input type="text" id="username" name="name" />
+            <div class="wrapper-icon">
+              <input class="text-filed" type="text" id="username" name="name" />
+              <svg class="field-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-name"></use>
+              </svg>
+            </div>
           </div>
           <div class="form-wrapper">
-            <label class="label-field" for="usertel">Phone</label>
-            <input type="tel" id="usertel" name="tel" />
+            <label class="label-field" for="tel">Phone</label>
+            <div class="wrapper-icon">
+              <input class="text-filed" type="tel" id="usertel" name="tel" />
+              <svg class="field-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
           </div>
           <div class="form-wrapper">
             <label class="label-field" for="usermail">Email</label>
-            <input type="email" id="usermail" name="email" />
+            <div class="wrapper-icon">
+              <input
+                class="text-filed"
+                type="email"
+                id="usermail"
+                name="email"
+              />
+              <svg class="field-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
           </div>
           <div class="form-wrapper">
             <label class="label-field" for="comment">Comment</label>
             <textarea
+              class="comment"
               id="comment"
               name="comment"
               placeholder="Text input"
             ></textarea>
           </div>
           <div>
-            <input type="checkbox" name="policy" id="policy" value="on" />
-            <label for="policy"
+            <input
+              class="policy-checkbox visually-hidden"
+              type="checkbox"
+              name="policy"
+              id="policy"
+              value="on"
+            />
+            <label for="policy" class="policy-label">
+              <span class="custom-checkbox">
+                <svg class="icon-vector" width="10" height="8">
+                  <use href="./images/icons.svg#icon-vector"></use>
+                </svg> </span
               >I accept the terms and conditions of the
               <a href="">Privacy Policy</a></label
             >
           </div>
-          <button type="submit" class="modal-btn">Send</button>
+          <button class="button-form" type="submit" class="modal-btn">
+            Send
+          </button>
         </form>
       </div>
     </div>
