--- a/index.html
+++ b/index.html
@@ -533,25 +533,30 @@
         </div>
         <div class="subscribe">
           <p class="main-social-media">Subscribe</p>
-          <label>
+          <form class="sub-form">
+            <label for="email"></label>
             <input
               type="email"
               class="sub-email"
               name="email"
+              id="email"
               placeholder="E-mail"
-          /></label>
-          <button type="submit" class="sub-btn">
-            Subscribe
-            <svg class="social-media-svg-footer" width="24" height="20">
-              <use href="./images/icons.svg#icon-plane"></use>
-            </svg>
-          </button>
+            />
+
+            <button type="submit" class="sub-btn">
+              Subscribe
+              <svg class="social-media-svg-footer" width="24" height="20">
+                <use href="./images/icons.svg#icon-plane"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
+    <!--#region modal-overlay-->
     <div class="modal-overlay">
       <div class="modal">
-        <button class="close-modal">
+        <button type="button" class="close-modal">
           <svg class="close-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
@@ -559,16 +564,21 @@
         <p class="modal-text">Leave your contacts and we will call you back</p>
         <form class="form">
           <div class="form-wrapper">
-            <label class="label-field" for="username">Name</label>
+            <label class="label-field" for="user-name">Name</label>
             <div class="wrapper-icon">
-              <input class="text-filed" type="text" id="username" name="name" />
+              <input
+                class="text-filed"
+                type="text"
+                id="user-name"
+                name="user-name"
+              />
               <svg class="field-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-name"></use>
               </svg>
             </div>
           </div>
           <div class="form-wrapper">
-            <label class="label-field" for="tel">Phone</label>
+            <label class="label-field" for="usertel">Phone</label>
             <div class="wrapper-icon">
               <input class="text-filed" type="tel" id="usertel" name="tel" />
               <svg class="field-icon" width="18" height="24">
@@ -590,24 +600,24 @@
               </svg>
             </div>
           </div>
-          <div class="form-wrapper">
-            <label class="label-field" for="comment">Comment</label>
+          <div class="form-wrapper-comment">
+            <label class="label-field" for="user-comment">Comment</label>
             <textarea
               class="comment"
-              id="comment"
-              name="comment"
+              id="user-comment"
+              name="user-comment"
               placeholder="Text input"
             ></textarea>
           </div>
-          <div>
+          <div class="div-policy">
             <input
               class="policy-checkbox visually-hidden"
               type="checkbox"
-              name="policy"
-              id="policy"
-              value="on"
+              name="user-privacy"
+              id="user-privacy"
+              value="true"
             />
-            <label for="policy" class="policy-label">
+            <label for="user-privacy" class="policy-label">
               <span class="custom-checkbox">
                 <svg class="icon-vector" width="10" height="8">
                   <use href="./images/icons.svg#icon-vector"></use>
@@ -616,11 +626,10 @@
               <a href="">Privacy Policy</a></label
             >
           </div>
-          <button class="button-form" type="submit" class="modal-btn">
-            Send
-          </button>
+          <button class="button-form" type="submit">Send</button>
         </form>
       </div>
     </div>
+    <!-- #endregion modal-overlay  -->
   </body>
 </html>
