--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
                   <use href="./images/icons.svg#icon-vector"></use>
                 </svg> </span
               >I accept the terms and conditions of the
-              <a href="">Privacy Policy</a></label
+              <a href="" class="link-policy">Privacy Policy</a></label
             >
           </div>
           <button class="button-form" type="submit">Send</button>
