--- a/index.html
+++ b/index.html
@@ -534,14 +534,14 @@
         <div class="subscribe">
           <p class="main-social-media">Subscribe</p>
           <form class="sub-form">
-            <label for="email"></label>
-            <input
-              type="email"
-              class="sub-email"
-              name="email"
-              id="email"
-              placeholder="E-mail"
-            />
+            <label for="email" class="sub-label">
+              <input
+                type="email"
+                class="sub-email"
+                name="email"
+                id="email"
+                placeholder="E-mail"
+            /></label>
 
             <button type="submit" class="sub-btn">
               Subscribe
