--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
 
             <button type="submit" class="sub-btn">
               Subscribe
-              <svg class="social-media-svg-footer" width="24" height="20">
+              <svg class="btn-social-media-svg-footer" width="24" height="24">
                 <use href="./images/icons.svg#icon-plane"></use>
               </svg>
             </button>
